[package]
name = "piggybank-wasm"
version = "0.1.0"
authors = ["Julian Ćwirko <julian.cwirko@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.piggybank]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.22.11"

[dependencies.elrond-wasm-output]
version = "0.22.11"
features = ["wasm-output-mode"]

[workspace]
members = ["."]
