[package]
name = "piggybank-wasm"
version = "0.5.2"
authors = ["Julian Ćwirko <julian.cwirko@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = [ "cdylib",]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.piggybank]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.39.6"

[workspace]
members = ["."]
